fsharp/grammar.js
    file: ($) =>
      choice(
        repeat1($.namespace),
        prec(-1, repeat(choice($._module_elem, $._elem_separator))),
        prec(1, $.named_module),
      ),

    // The optional leading _elem_separator matters when the file opens with
    // an extra (e.g. a doc comment) before the header keyword: the scanner
    // fires the separator after the extra's newline, and if only the plain
    // module-elements arm of `file` could shift it, doing so would commit
    // the parse away from namespace/named_module before the keyword is even
    // seen (`module M` then mis-parses as a module_defn missing its `=`).
    namespace: ($) =>
      seq(
        optional($._elem_separator),
        "namespace",
        choice(
          "global",
          field("name", seq(optional("rec"), $.long_identifier)),
        ),
        repeat(choice($._module_elem, $._elem_separator)),
      ),

    _module_elem: ($) =>
      choice(
        alias($.value_declaration, $.declaration_expression),
        $.module_defn,
        $.module_abbrev,
        $.import_decl,
        $.fsi_directive_decl,
        $.type_definition,
        $.exception_definition,
        $.extern_binding,
        $._expression,
        $.preproc_if,
        alias($._attribute_expression, $.declaration_expression),
        // $.exception_defn
      ),

    module_defn: ($) =>
      prec.left(
        seq(
          optional($.attributes),
          "module",
          optional($.access_modifier),
          optional("rec"),
          $.identifier,
          "=",
          choice(
            scoped($._module_body, $._indent, $._dedent),
            seq(
              "begin",
              scoped(optional($._module_body), $._indent, $._dedent),
              "end",
            ),
          ),
        ),
      ),

    _module_body: ($) =>
      seq(
        $._module_body_elem,
        repeat(
          prec(
            // Make sure to parse a module node before a sequential expression
            // NOTE: This removes all sequential expressions from module bodies
            PREC.SEQ_EXPR + 1,
            seq(alias($._newline, ";"), $._module_body_elem),
          ),
        ),
      ),

    attributes: ($) => prec.left(repeat1($._attribute_set)),
    _attribute_set: ($) =>
      seq(
        "[<",
        $.attribute,
        prec(PREC.SEQ_EXPR + 1, repeat(seq($._newline, $.attribute))),
        // A trailing separator is allowed: `[<Fact; >]`.
        optional($._newline),
        ">]",
      ),
    attribute: ($) =>
      seq(
        optional(seq(field("target", $.identifier), ":")),
        $._object_construction,
      ),

    _object_construction: ($) =>
      prec.left(PREC.SEQ_EXPR + 1, seq($._type, optional($._expression))),

    //
    // Attributes (END)
    //

    do: ($) => prec(PREC.DO_EXPR + 1, seq("do", $._expression_block)),

    _function_or_value_defns: ($) =>
      prec.right(
        seq(
          $._function_or_value_defn_body,
          repeat(seq("and", $._function_or_value_defn_body)),
        ),
      ),

    function_or_value_defn: ($) =>
      seq(
        choice("let", "let!"),
        choice(
          $._function_or_value_defn_body,
          seq("rec", $._function_or_value_defns),
        ),
      ),

    _function_or_value_defn_body: ($) =>
      seq(
        choice($.function_declaration_left, $.value_declaration_left),
        // The return type may carry attributes: `let f(x) : [<A>] int = ...`.
        optional(seq(":", optional($.attributes), $._type)),
        optional($.type_argument_constraints),
        "=",
        field("body", $._expression_block_for_let),
      ),

    function_declaration_left: ($) =>
      prec.left(
        3,
        seq(
          optional("inline"),
          optional($.access_modifier),
          prec(100, $._identifier_or_op),
          optional($.type_arguments),
          $.argument_patterns,
        ),
      ),

    value_declaration_left: ($) =>
      prec.left(
        2,
        choice(
          seq(
            optional("mutable"),
            optional($.access_modifier),
            $._pattern,
            optional($.type_arguments),
          ),
          // `let inline add3 = add 3` — an inline value has no parameters, so it
          // is not a function_declaration_left. Only a plain name may follow the
          // keyword, so `let inline f x` stays a function.
          seq("inline", optional($.access_modifier), alias($._inline_value_name, $.identifier_pattern), optional($.type_arguments)),
        ),
      ),

    // The name of an inline value: a bare identifier_pattern with no arguments.
    _inline_value_name: ($) => $.long_identifier_or_op,

    _pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.typed_const_pattern,
        $.const,
        $.as_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.repeat_pattern,
        $.paren_pattern,
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.typed_pattern,
        $.attribute_pattern,
        $.type_check_pattern,
        $.optional_pattern,
        $.identifier_pattern,
        $.named_field_pattern,
      ),

    argument_patterns: ($) =>
      // argument patterns are generally no different from normal patterns.
      // however, any time an argument pattern is a valid node, (i.e. inside a beginning fun decl)
      // it is always the correct node to construct.
      prec.left(1000, repeat1($._atomic_pattern)),

    _atomic_pattern: ($) =>
      choice(
        "null",
        "_",
        $.typed_const_pattern,
        $.const,
        $.long_identifier,
        $.list_pattern,
        $.record_pattern,
        $.array_pattern,
        seq("(", $._pattern, ")"),
        $.type_check_pattern,
      ),

    identifier_pattern: ($) =>
      prec.left(
        1,
        seq(
          $.long_identifier_or_op,
          optional($._pattern),
          optional($._pattern),
        ),
      ),

    //
    // Pattern rules (END)
    //

    //
    // Expressions (BEGIN)
    //

    _expression_block: ($) => seq($._indent, $._expression, $._dedent),

    // Like _expression_block, but also allows the block to be terminated by
    // the 'in' keyword instead of a dedent.  Used for let/use bindings so that
    // single-line  let x = 1 in x  works (where no newline → no DEDENT).
    _expression_block_for_let: ($) =>
      seq($._indent, $._expression, choice($._dedent, $._in)),

    _expression: ($) =>
      choice(
        "null",
        $.const,
        $.paren_expression,
        $.begin_end_expression,
        $.long_identifier_or_op,
        $.typed_expression,
        $.infix_expression,
        $.index_expression,
        $.mutate_expression,
        $.list_expression,
        $.array_expression,
        $.ce_expression,
        $.prefixed_expression,
        $.generic_new_expression,
        $.brace_expression,
        $.anon_record_expression,
        $.typecast_expression,
        $.declaration_expression,
        $.do_expression,
        $.fun_expression,
        $.function_expression,
        $.sequential_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        // Short-form comprehension `for x in xs -> e` so nested comprehensions
        // like `[ for l in 0..3 do for h in 0..3 -> (l, h) ]` parse — the
        // do-form body is a plain expression block.
        $.short_comp_expression,
        $.match_expression,
        $.try_expression,
        $.literal_expression,
        $.tuple_expression,
        $.application_expression,
        $.dot_expression,
        alias($.preproc_if_in_expression, $.preproc_if),
        $.srtp_call_expression,
      ),

    long_identifier_or_op: ($) =>
      prec.right(
        choice(
          $.long_identifier,
          seq($.long_identifier, ".", $._identifier_or_op),
          $._identifier_or_op,
        ),
      ),

    _else_expression: ($) => seq("else", field("else", $._expression_block)),

    _then_expression: ($) => seq("then", field("then", $._expression_block)),

    _if_branch: ($) => seq("if", field("guard", $._expression_block)),

    if_expression: ($) =>
      seq(
        $._if_branch,
        $._then_expression,
        repeat($.elif_expression),
        optional($._else_expression),
      ),

    declaration_expression: ($) =>
      seq(
        choice(
          seq(choice("use", "use!"), optional("mutable"), choice($.identifier, $.paren_pattern), optional(seq(":", $._type)), "=", $._expression_block_for_let),
          seq(
            $.function_or_value_defn,
            repeat($.and_bang),
          ),
        ),
        field("in", $._expression),
      ),

    infix_expression: ($) =>
      choice(
        prec.left(
          PREC.INFIX_OR,
          seq($._expression, alias(choice("||", "or"), $.infix_op), $._expression),
        ),
        prec.left(
          PREC.INFIX_AND,
          seq($._expression, alias("&&", $.infix_op), $._expression),
        ),
        prec.left(
          PREC.SPECIAL_INFIX,
          seq($._expression, $.infix_op, $._expression),
        ),
      ),

    _type: ($) =>
      prec(
        4,
        choice(
          $.simple_type,
          $.generic_type,
          $.paren_type,
          $.function_type,
          $.compound_type,
          $.postfix_type,
          $.list_type,
          $.byref_type,
          $.static_type,
          $.type_argument,
          $.constrained_type,
          $.flexible_type,
          $.anon_record_type,
          $.struct_type,
        ),
      ),

    // Like _type but excludes compound_type and function_type, used in member
    // signature argument positions. Per F# spec, T * T before -> is always two
    // separate positional arguments (not a tuple-typed arg); tuple/function-typed
    // arguments must be parenthesized: (T * T) or (T -> T).
    simple_type: ($) => choice($.long_identifier, $._static_type_identifier),
    _static_type_identifier: ($) =>
      prec(10, seq(choice("^", token(prec(100, "'"))), $.identifier)),

    type_definition: ($) =>
      prec.left(
        seq(
          optional($.attributes),
          "type",
          // Attributes may also sit between `type` and the name:
          // `type [<Struct>] R = ...`
          optional($.attributes),
          $._type_defn_body,
          repeat(
            seq(
              "and",
              choice(
                seq(optional($.attributes), $._type_defn_body),
                seq($._indent, optional($.attributes), $._type_defn_body, $._dedent),
              ),
            ),
          ),
        ),
      ),

    _type_defn_body: ($) =>
      choice(
        $.delegate_type_defn,
        $.record_type_defn,
        $.union_type_defn,
        $.interface_type_defn,
        $.anon_type_defn,
        $.enum_type_defn,
        $.type_abbrev_defn,
        $.type_extension,
        $.type_declaration,
      ),

    // Bare type declaration with no body, used for e.g. [<Measure>] type kg
    // _type_decl_newline fires only at end-of-line, making this unambiguous with anon_type_defn
    type_name: ($) =>
      prec(
        2,
        seq(
          optional($.access_modifier),
          choice(
            seq(
              field("type_name", $.long_identifier),
              optional($.type_arguments),
            ),
            seq(optional($.type_argument), field("type_name", $.identifier)), // Covers `type 'a option = Option<'a>`
          ),
          // Trailing constraint clause, e.g. `type 'a C when 'a : comparison = ...`
          optional($.type_argument_constraints),
        ),
      ),

    union_type_cases: ($) =>
      seq(
        optional("|"),
        $.union_type_case,
        repeat(seq(optional($._newline), "|", $.union_type_case)),
      ),

    union_type_case: ($) =>
      prec(
        8,
        seq(
          optional($.attributes),
          $.identifier,
          optional(choice(seq("of", $.union_type_fields), seq(":", $._type))),
        ),
      ),

    _string_char: ($) =>
      choice(
        $._simple_string_char,
        $._escape_char,
        $._trigraph,
        $._unicodegraph_short,
        $._hexgraph_short,
        $._non_escape_char,
        $._unicodegraph_long,
      ),

    format_string_eval: ($) =>
      choice(
        seq(token.immediate(prec(1000, "{")), $._expression, "}"),
        seq($._multi_dollar_interp_start, $._expression, $._multi_dollar_interp_end),
      ),

    format_string: ($) =>
      choice(
        seq(
          token(prec(100, '$"')),
          repeat(
            choice(
              $.format_string_eval,
              // '{{' / '}}' are literal-brace escapes; must outrank the
              // interpolation-hole '{' (prec 1000).
              token.immediate(prec(1001, /\{\{|\}\}/)),
              $._string_char,
            ),
          ),
          '"',
        ),
        // Verbatim interpolated: $@"..." / @$"..." — backslashes are literal,
        // '""' is an escaped quote, {expr} holes still apply.
        seq(
          token(prec(100, choice('$@"', '@$"'))),
          repeat(
            choice(
              $.format_string_eval,
              token.immediate(prec(1001, /\{\{|\}\}/)),
              $._verbatim_string_char,
            ),
          ),
          token.immediate('"'),
        ),
      ),

    _string_literal: ($) => seq('"', repeat($._string_char), '"'),

    string: ($) => choice($._string_literal, $.format_string),

    _verbatim_string_char: ($) =>
      choice($._simple_string_char, $._non_escape_char, "\\", /\"\"/),
    verbatim_string: ($) =>
      seq('@"', repeat($._verbatim_string_char), token.immediate('"')),
    format_triple_quoted_string: ($) =>
      choice(
        seq(
          token(prec(100, '$"""')),
          optional($._format_triple_quoted_content),
          repeat(seq($.format_string_eval, optional($._format_triple_quoted_content))),
          '"""',
        ),
        seq(
          $._multi_dollar_triple_quote_start,
          optional($._multi_dollar_triple_quoted_content),
          repeat(seq($.format_string_eval, optional($._multi_dollar_triple_quoted_content))),
          $._multi_dollar_triple_quote_end,
        ),
      ),

    triple_quoted_string: ($) =>
      choice(
        seq('"""', $._triple_quoted_content, '"""'),
        $.format_triple_quoted_string,
      ),

    bool: (_) => token(choice("true", "false")),

    const: ($) =>
      choice(
        $.sbyte,
        $.int16,
        $.int32,
        $.int64,
        $.byte,
        $.uint16,
        $.uint32,
        $.int,
        $.xint,
        $.nativeint,
        $.unativeint,
        $.decimal,
        $.float,
        $.uint64,
        $.ieee32,
        $.ieee64,
        $.bignum,
        $.char,
        $.string,
        $.verbatim_string,
        $.triple_quoted_string,
        $.bytearray,
        $.verbatim_bytearray,
        $.bool,
        $.unit,
      ),

    // Identifiers:
    identifier: (_) =>
      token(
        choice(
          /[_\p{XID_Start}][_'\p{XID_Continue}]*/,
          // Double-backtick identifier: any run of non-newline chars delimited
          // by ``. Single backticks may appear inside (e.g. ``a `b` c``); the
          // delimiter is the next `` pair, so a backtick is only consumed when
          // followed by a non-backtick.
          /``([^`\n\r\t]|`[^`\n\r\t])+``/,
        ),
      ),

    long_identifier: ($) =>
      prec.right(seq($.identifier, repeat(seq(".", $.identifier)))),

    _identifier_or_op: ($) =>
      choice($.identifier, $.op_identifier, $.active_pattern),

    _infix_or_prefix_op: (_) => choice("+", "-", "+.", "-.", "%", "&"),

    int: (_) => token(/[+-]?([0-9]_?)+/),
    block_comment: ($) =>
      seq("(*", $.block_comment_content, token.immediate("*)")),
    xml_doc: (_) => token(/\/\/\/([^/\n\r][^\n\r]*)?/),

    // preprocessors
